CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2003 by Bill Kendrick
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/


2003.March.14 (0.9.11) [cvs]
  * Set $OUTPUT_CHARSET for Japanese locale, to fix Win32 issue.
    TOYAMA Shin-ichi <kyone@tky2.3web.ne.jp>

  * Lithuanian translation.
    Mantas Kriauciunas <monte@mail.lt>,
    Rita Verbauskaite <verba@centras.lt>

  * Fixed bug that would cause some translated stamp sounds to not load.
    John Popplewell <john@johnnypops.demon.co.uk>

  * Added Dutch translation of (older version of) HTML documentation.
    (docs/html/README-nl.html; docs/nl/README.txt)
    Geert Stams <geert-csg@wanadoo.nl>

  * Updated Polish translations.
    Robert Glowczynski <robertg@software.com.pl>

  * Added Polish version of manpage.
    Robert Glowczynski <robertg@software.com.pl>

  * Restructured manpage sources (created "src/manpage/")

  * Fixed a few typos in the manpage.
    Robert Glowczynski <robertg@software.com.pl>


2003.February.22 (0.9.10)
  * UTF-8 stamp descriptions word-wrap around spaces.

  * Portuguese (from Portugal) translation.
    Ricardo Cruz <rick2@aeiu.pt>

  * Support for more HTML escape codes in description files.
    [ Not yet working ]

  * Czech .po file renamed to the correct "cs.po".
  
  * ALT+F4 accepted as alternative to [Escape] (to quit)
    by Tux Paint's main loop.  Windows wasn't rending a 'Close Window'
    event on that key combo, like it should (I think).
    John Popplewell <john@johnnypops.demon.co.uk>

  * Windows printing changes:
    + Now uses a default printer configuration.
    + No pop-up dialog appears unless [ALT] is held while hitting "Print"
      button in the toolbox.
    + Can be told to save any changes to printer configuration (so it's
      used as default configuration from now on) by sending the
      "--printcfg" command-line option.
    John Popplewell <john@johnnypops.demon.co.uk>
