@@ -1,5 +1,5 @@
-.\" tuxpaint.1 - 2003.03.14
-.TH TUXPAINT 1 "14 Mar 2003" "0.9.11" "Tux Paint"
+.\" tuxpaint.1 - 2003.04.05
+.TH TUXPAINT 1 "05 Apr 2003" "0.9.11" "Tux Paint"
 .SH NAME
 tuxpaint -- A drawing program for young children.
 
